dont reset all the vars to none every time!

--- a/custom_components/nfl/manifest.json
+++ b/custom_components/nfl/manifest.json
@@ -2,7 +2,7 @@
     "domain": "nfl",
     "name": "NFL Scores",
     "version": "0.1",
-    "documentation": "https://github.com/zacs/ha_nfl/",
+    "documentation": "https://github.com/zacs/ha_nfl",
     "issue_tracker": "https://github.com/zacs/ha_nfl/issues",
     "dependencies": [],
     "codeowners": ["@zacs"],
