add initial logic for smart refresh

--- a/custom_components/nfl/manifest.json
+++ b/custom_components/nfl/manifest.json
@@ -7,6 +7,6 @@
     "dependencies": [],
     "codeowners": ["@zacs"],
     "config_flow": true,
-    "requirements": [],
+    "requirements": ["arrow"],
     "iot_class": "cloud_polling"
   }
