--- a/requirements_test.txt
+++ b/requirements_test.txt
@@ -1,10 +1,10 @@
 async-timeout
 black
 isort
-pytest
-pytest-asyncio
-pytest-cov
-pytest-mock
-pytest-homeassistant-custom-component
+pytest>=8.0.2
+pytest-asyncio>=0.23.5
+pytest-cov>=4.1.0
+pytest-mock>=3.14.0
+pytest-homeassistant-custom-component>=0.13.109
 arrow
 aiofiles
